welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: reassignment to val
  if (num=1){
         ^golomb:7: error: type mismatch;
 found   : Unit
 required: Int
  for (i<- 1 to num-1){
        ^